fix(maengel-tool): align tool behavior with Anpassungswunsch
- Select MAENGEL infrastructure on init
- Trigger data refetch on tool activation
- Ensure table visibility via viewer query params

--- a/frontend/radvis/src/app/viewer/maengel/components/maengel-tool/maengel-tool.component.scss
+++ b/frontend/radvis/src/app/viewer/maengel/components/maengel-tool/maengel-tool.component.scss
@@ -1,34 +1,4 @@
-@import 'src/style/spacing';
-@import 'src/style/colors';
-
 :host {
+  display: block;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  width: $viewer-side-bar-width;
-}
-
-.form-group {
-  flex-grow: 1;
-  overflow: hidden;
-}
-
-a.editor-ausschnitt-link:visited, a.editor-ausschnitt-link {
-  color: unset;
-}
-
-.new-tab-icon {
-  vertical-align: middle;
-}
-
-.hinweis-liste {
-  font-style: italic;
-  font-size: 75%;
-  color: map-get($grayscale, 500);
-  padding-inline-start: 1rem;
-  padding-right: 1rem;
-
-  li:not(:last-child) {
-    margin-bottom: 0.25rem;
-  }
 }
